[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Fonts/Atarian/SF Atarian System Extended Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Fonts/Atarian/SF Atarian System Extended.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scences/UI/EndLevelMenu.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.658824, 0.615686, 0.141176, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.815686, 0.584314, 0.137255, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.00392157, 0.00392157, 0.00392157, 1 )
border_blend = true
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="EndLevelMenu" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 3 )

[node name="EndLevelMenu" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Panel" parent="EndLevelMenu"]
margin_left = 416.0
margin_top = 198.0
margin_right = 623.0
margin_bottom = 412.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="EndLevelMenu/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="EndLevelMenu/Background/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 197.0
margin_bottom = 204.0

[node name="TieuDe" type="Label" parent="EndLevelMenu/Background/MarginContainer/VBoxContainer"]
margin_right = 187.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 4 )
text = "CHIEN THANG"
align = 1

[node name="NinePatchRect" type="NinePatchRect" parent="EndLevelMenu/Background/MarginContainer/VBoxContainer"]
margin_top = 21.0
margin_right = 187.0
margin_bottom = 41.0
rect_min_size = Vector2( 0, 20 )

[node name="NutLevelKeTiep" type="Button" parent="EndLevelMenu/Background/MarginContainer/VBoxContainer"]
margin_top = 45.0
margin_right = 187.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "LEVEL KE TIEP"

[node name="NinePatchRect2" type="NinePatchRect" parent="EndLevelMenu/Background/MarginContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 187.0
margin_bottom = 83.0
rect_min_size = Vector2( 0, 15 )

[node name="NutChoiLai" type="Button" parent="EndLevelMenu/Background/MarginContainer/VBoxContainer"]
margin_top = 87.0
margin_right = 187.0
margin_bottom = 106.0
custom_fonts/font = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "CHOI LAI"

[node name="NinePatchRect3" type="NinePatchRect" parent="EndLevelMenu/Background/MarginContainer/VBoxContainer"]
margin_top = 110.0
margin_right = 187.0
margin_bottom = 125.0
rect_min_size = Vector2( 0, 15 )

[node name="NutVeMenu" type="Button" parent="EndLevelMenu/Background/MarginContainer/VBoxContainer"]
margin_top = 129.0
margin_right = 187.0
margin_bottom = 148.0
custom_fonts/font = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "QUAY VE MENU"

[connection signal="pressed" from="EndLevelMenu/Background/MarginContainer/VBoxContainer/NutLevelKeTiep" to="." method="_on_NutLevelKeTiep_pressed"]
[connection signal="pressed" from="EndLevelMenu/Background/MarginContainer/VBoxContainer/NutChoiLai" to="." method="_on_NutChoiLai_pressed"]
[connection signal="pressed" from="EndLevelMenu/Background/MarginContainer/VBoxContainer/NutVeMenu" to="." method="_on_NutVeMenu_pressed"]
